# IC_G07_Proj2

./: LICENSE  README.md
Part_I/: CMakeLists.txt  Makefile  copyImage.cpp  intensityImage.cpp  mirrorImage.cpp  negativeImage.cpp  rotateImage.cpp
Part_I/exe01/: CMakeLists.txt  Makefile  copyImage.cpp
Part_I/exe01/test_programs/: copyImage
Part_I/exe02/: CMakeLists.txt  Makefile  intensityImage.cpp  mirrorImage.cpp  negativeImage.cpp  rotateImage.cpp
Part_I/exe02/test_programs/: mirrorImage  negativeImage  rotateImage
Part_I/test_programs/: copyImage  intensityImage
Part_II/: CMakeLists.txt  Golomb.cpp  Golomb.hpp  Makefile
Part_II/test_programs/: test  test.cpp
Part_III/: CMakeCache.txt  CMakeLists.txt  Makefile  audioCodec.cpp  audioCodec.hpp  cmake_install.cmake
Part_III/BitStream/: BitStream.cpp  BitStream.hpp
Part_III/test_programs/: coded_lossless_01_a  coded_lossless_01_b  coded_lossless_01_c  coded_lossy_01_c  out_01  testDecoding  testDecoding.cpp  testEncoding  testEncoding.cpp
Parte_IV/: CMakeLists.txt  Golomb.h  ImageCodec.h  Makefile  bitstream.h  new_image.ppm  output  test_image_codec.cpp
